--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,8 +13,18 @@ body {
 .h-md-100{
     height: 100%;
 }
+.h-50c{
+    height: 50vh;
+    width: 20vw;
+}
+.fs-icon{
+    font-size: 5rem !important;
+}
 }
 
+.main-home-container{
+    background-color: white;
+}
 
 /********************** Header ******************************/
 
